--- a/webpack_version/style.css
+++ b/webpack_version/style.css
@@ -7,3 +7,37 @@ body{
 #c{
 	background-color: #898989;
 }
+
+canvas{
+	padding: 10px;
+	/* display: block; */
+}
+
+#nav{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 40px;
+	background-color: #c5c6c7;
+}
+button{
+/* position: fixed; */
+/* top: 10px;
+left: 10px; */
+margin: 10px;
+}
+#colorpicker{
+	display: inline;
+}
+#blend{
+	display: inline;
+	padding-left: 20px;
+}
+#dimensions{
+	display: inline;
+	padding-left: 20px;
+}
+input {
+    margin: .4rem;
+}
